--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,43 @@ res/*.wasm
 
 # Mac
 .DS_Store
+
+
+#Front
+# dependencies
+front/node_modules
+front/.pnp
+front/.pnp.js
+
+# testing
+front/coverage
+
+# next.js
+front/.next/
+front/out/
+
+# production
+front/build
+
+# misc
+front/.DS_Store
+front/*.pem
+
+# debug
+front/yarn-debug.log*
+front/npm-debug.log*
+front/yarn-error.log*
+front/.pnpm-debug.log*
+
+# local env files
+front/.env
+front/.env.local
+front/.env.development.local
+front/.env.test.local
+front/.env.production.local
+
+# vercel
+front/.vercel
+
+# typescript
+front/*.tsbuildinfo
