Fixing the Withdraw. Issues with the deposit in the NEW CrossContractCalls API of NEAR

--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -1,7 +1,8 @@
 [workspace]
 members = [
     "meta-vote-contract",
-    "pipeline-contract"
+    "pipeline-contract",
+    "test-meta-token"
 ]
 
 [profile.release]
