--- a/contract/Makefile
+++ b/contract/Makefile
@@ -16,6 +16,7 @@ build:
 	RUSTFLAGS='-C link-arg=-s' cargo +stable build --all --target wasm32-unknown-unknown --release
 	cp target/wasm32-unknown-unknown/release/meta_vote_contract.wasm res/
 	cp target/wasm32-unknown-unknown/release/pipeline_contract.wasm res/
+	cp target/wasm32-unknown-unknown/release/test_meta_token.wasm res/
 
 publish-dev: build
 	NEAR_ENV=testnet near dev-deploy --wasmFile res/katherine_fundraising_contract.wasm
@@ -24,8 +25,8 @@ publish-dev-init: build
 	rm -rf neardev/
 	NEAR_ENV=testnet near dev-deploy --wasmFile res/katherine_fundraising_contract.wasm --initFunction new --initArgs '{"owner_id": ${NEAR_ACCOUNT}, "min_deposit_amount": "2000000000000", "metapool_contract_address": "meta-v2.pool.testnet", "katherine_fee_percent": 100 }'
 
-integration-meta-pool: build
-	./scripts/integration_meta_pool.sh
+integration-test: build
+	./scripts/integration_test.sh
 
 integration: build
 	scripts/integration.sh
