--- a/front/package.json
+++ b/front/package.json
@@ -15,7 +15,18 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@fontsource/inter": "^4.5.5",
+    "@near-wallet-selector/core": "^5.0.1",
+    "@near-wallet-selector/ledger": "^5.0.3",
+    "@near-wallet-selector/math-wallet": "^5.0.3",
+    "@near-wallet-selector/modal-ui": "^5.0.3",
+    "@near-wallet-selector/my-near-wallet": "^5.0.3",
+    "@near-wallet-selector/near-wallet": "^5.0.3",
+    "@near-wallet-selector/nightly": "^5.0.3",
+    "@near-wallet-selector/nightly-connect": "^5.0.3",
+    "@near-wallet-selector/sender": "^5.0.3",
+    "@near-wallet-selector/wallet-connect": "^5.0.3",
     "@types/gtag.js": "^0.0.10",
+    "better-sqlite3": "^7.6.2",
     "bn": "^1.0.5",
     "dotenv": "^16.0.0",
     "formik": "^2.2.9",
