--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,7 @@
     "@near-wallet-selector/math-wallet": "^7.0.1",
     "@near-wallet-selector/modal-ui": "^7.0.1",
     "@near-wallet-selector/my-near-wallet": "^7.0.1",
+    "@near-wallet-selector/narwallets": "file:../../wallet-selector-narwallets/packages/narwallets",
     "@near-wallet-selector/near-wallet": "^7.0.1",
     "@near-wallet-selector/wallet-connect": "^7.0.1",
     "@types/gtag.js": "^0.0.10",
