--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
     "@near-wallet-selector/my-near-wallet": "^7.0.1",
     "@near-wallet-selector/near-wallet": "^7.0.1",
     "@near-wallet-selector/wallet-connect": "^7.0.1",
+    "@near-wallet-selector/nightly": "^7.0.1",
     "@types/gtag.js": "^0.0.10",
     "better-sqlite3": "^7.6.2",
     "bn": "^1.0.5",
